*** `abbrev-expand-function' obsoletes `abbrev-expand-functions'.
*** `completion-in-region-function' obsoletes `completion-in-region-functions'.
*** `filter-buffer-substring-function' obsoletes `filter-buffer-substring-functions'.

** `split-string' now takes an optional argument TRIM.
The value, if non-nil, is a regexp that specifies what to trim from
the start and end of each substring.

** `get-upcase-table' is obsoleted by the new `case-table-get-table'.

** Support for filesystem notifications.
Emacs now supports notifications of filesystem changes, such as
creation, modification, and deletion of files.  This requires the
`glib' API, or the 'inotify' API (on GNU/Linux systems only).  On
MS-Windows systems, this is supported for Windows XP and newer
versions.

** Changes in autorevert.el

---
*** If Emacs is compiled with file notification support, notifications
are used instead of checking the time stamp of the files.  You can
disable this by setting the user option `auto-revert-use-notify' to
nil.  Alternatively, a regular expression of directories to be
excluded from file notifications can be specified by
`auto-revert-notify-exclude-dir-regexp'.

---
*** The new user option `auto-revert-remote-files' enables reversion
of remote files when set to non-nil.

** Face changes

*** The function `face-spec-set' is now analogous to `setq' for face specs.
Its third arg now accepts values specifying exactly which face spec to
set (defface, custom, or user spec), and it directly sets the relevant
property using the supplied face spec.

*** Face specs set via Custom themes now replace the `defface' spec
rather than inheriting from it (as do face specs set via Customize).

*** New face characteristic (supports :underline (:style wave))
specifies whether or not the terminal can display a wavy line.

*** New face spec attribute :distant-foreground
specifies foreground to use if background color is near the foreground
color that would otherwise have been used.
